--- a/ss7/blog1/src/main/resources/application.properties
+++ b/ss7/blog1/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=bigbang23
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+server.error.include-message=always
+
 server.port=8081
