--- a/ss9/ex1/src/main/resources/application.properties
+++ b/ss9/ex1/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ss8ex2?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ss9?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=codegym123
+spring.datasource.password=codegym
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
-
+spring.main.allow-circular-references=true
 server.port=8081
